[gd_scene format=3 uid="uid://qmn12mqhjgmo"]

[ext_resource type="Script" uid="uid://b7kbwudnmvoqr" path="res://old_scenes/music_manager.gd" id="1_tn5dr"]
[ext_resource type="AudioStream" uid="uid://drb3nm10midox" path="res://assets/music/main_menu_music.ogg" id="2_hetdf"]
[ext_resource type="AudioStream" uid="uid://c6e2q10q7654u" path="res://assets/music/background_music.ogg" id="3_jd6i5"]
[ext_resource type="AudioStream" uid="uid://b7fm7fy1ghcys" path="res://assets/sfx/enemy_hurt.ogg" id="4_yodp2"]

[node name="MusicManager" type="Node"]
process_mode = 3
script = ExtResource("1_tn5dr")

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hetdf")
bus = &"1_Music"
parameters/looping = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jd6i5")
bus = &"1_Music"
parameters/looping = true

[node name="EnemyHurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yodp2")
max_polyphony = 3
bus = &"2_SFX"
